--- a/src/index.css
+++ b/src/index.css
@@ -12,3 +12,22 @@ svg {
   fill: currentColor;
   height: 2em;
 }
+
+@media screen and (min-width: 1440px) {
+  body {
+    font-size: 16px;
+  }
+}
+
+@media screen and (min-width: 1920px) {
+  body {
+    font-size: 20px;
+  }
+}
+
+@media screen and (min-width: 2560px) {
+  body {
+    font-size: 26px;
+  }
+}
+
